--- a/src/index.html
+++ b/src/index.html
@@ -15,11 +15,11 @@
   </header>
   <main class="content">
     <section class="profile page__section">
-      <div class="profile__image" style="background-image: url('<%=require('./images/avatar.jpg')%>')"></div>
+      <div class="profile__image"></div>
       <div class="profile__info">
-        <h1 class="profile__title">Жак-Ив Кусто</h1>
+        <h1 class="profile__title"></h1>
         <button class="profile__edit-button" type="button"></button>
-        <p class="profile__description">Исследователь океана</p>
+        <p class="profile__description"></p>
       </div>
       <button class="profile__add-button" type="button"></button>
     </section>
@@ -38,9 +38,36 @@
     <div class="popup__content">
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
-      <form class="popup__form" name="edit-profile">
-        <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя" required>
-        <input type="text" name="description" class="popup__input popup__input_type_description" placeholder="Занятие" required>
+      <form class="popup__form" name="edit-profile" id="popup__profile" novalidate>
+        <label class="popup__form-field">
+          <input 
+            type="text" 
+            name="name" 
+            class="popup__input popup__input_type_name" 
+            id="input__name" 
+            placeholder="Имя" 
+            required 
+            minlength="2" 
+            maxlength="40"
+            pattern="^[a-zA-Zа-яА-ЯЁё \-]+$"
+            data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
+          >
+          <span class="input__name-error popup__input-error"></span>
+        </label>
+        <label class="popup__form-field">
+          <input 
+            type="text" 
+            name="description" 
+            class="popup__input popup__input_type_description" id="input__description" 
+            placeholder="Занятие" 
+            required 
+            minlength="2" 
+            maxlength="200"
+            pattern="^[a-zA-Zа-яА-ЯЁё \-]+$"
+            data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
+          >
+          <span class="input__description-error popup__input-error"></span>
+        </label>
         <button type="submit" class="button popup__button">Сохранить</button>
       </form>
     </div>
@@ -49,13 +76,51 @@
     <div class="popup__content">
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Новое место</h3>
-      <form class="popup__form" name="new-place">
-        <input type="text" name="place-name" class="popup__input popup__input_type_card-name" placeholder="Название" required>
-        <input type="url" name="link" class="popup__input popup__input_type_url" placeholder="Ссылка на картинку" required>
+      <form class="popup__form" name="new-place" novalidate>
+        <label class="popup__form-field">
+          <input 
+            type="text" 
+            name="place-name" 
+            class="popup__input popup__input_type_card-name" id="input__card-name" 
+            placeholder="Название" 
+            required 
+            minlength="2" 
+            maxlength="30"
+            pattern="^[a-zA-Zа-яА-ЯЁё \-]+$"
+            data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
+          >
+          <span class="input__card-name-error form__input-error"></span>
+        </label>
+        <label class="popup__form-field">
+          <input type="url" name="link" class="popup__input popup__input_type_url" id="input__url" placeholder="Ссылка на картинку" required>
+          <span class="input__url-error form__input-error"></span>
+        </label>
         <button type="submit" class="button popup__button">Сохранить</button>
       </form>
     </div>
   </div>
+  <div class="popup popup_type_edit-avatar">
+    <div class="popup__content">
+      <button type="button" class="popup__close"></button>
+      <h3 class="popup__title">Обновить аватар</h3>
+      <form class="popup__form" name="edit-avatar" novalidate>
+        <label class="popup__form-field">
+          <input type="url" name="link" class="popup__input popup__input_type_avatar" id="input__avatar" placeholder="Ссылка на аватарку" required>
+          <span class="input__avatar-error popup__input-error"></span>
+        </label>
+        <button type="submit" class="button popup__button">Сохранить</button>
+      </form>
+    </div>
+  </div>
+  <div class="popup popup_type_delete-card">
+    <div class="popup__content">
+      <button type="button" class="popup__close"></button>
+      <h3 class="popup__title">Вы уверены?</h3>
+      <form class="popup__form" name="delete-card" novalidate>
+        <button type="submit" class="button popup__button">Да</button>
+      </form>
+    </div>
+  </div>  
   <div class="popup popup_type_image">
     <div class="popup__content popup__content_content_image">
       <button type="button" class="popup__close"></button>
@@ -73,7 +138,10 @@
     <div class="card__description">
       <h2 class="card__title">
       </h2>
-      <button type="button" class="card__like-button"></button>
+      <div class="card__like-wrap">
+        <button type="button" class="card__like-button"></button>
+        <span class="card__like-counter">
+      </div>
     </div>
   </li>
 </template>
